feat: add doubao

--- a/split.html
+++ b/split.html
@@ -24,16 +24,9 @@
 </head>
 <body>
   <div class="container">
-    <iframe 
-      id="deepseek" 
-      class="chat-window" 
-      src="https://chat.deepseek.com/"
-    ></iframe>
-    <iframe 
-      id="grok" 
-      class="chat-window" 
-      src="https://grok.com/"
-    ></iframe>
+    <iframe id="grok" class="chat-window" src="https://grok.com/"></iframe>
+    <iframe id="deepseek" class="chat-window" src="https://chat.deepseek.com/"></iframe>
+    <iframe id="doubao" class="chat-window" src="https://www.doubao.com/"></iframe>
   </div>
   <script src="content.js"></script>
 </body>
