--- a/split.html
+++ b/split.html
@@ -7,11 +7,16 @@
       margin: 0;
       padding: 0;
       width: 100%;
-      height: 100%;
-      overflow: hidden;
+      height: 100vh;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
     .container {
       display: flex;
+      width: 100vw;
+      height: 100vh;
+    }
+    .container-2 {
       width: 100vw;
       height: 100vh;
     }
@@ -20,13 +25,19 @@
       height: 100%;
       border: none;
     }
+    .chat-window-2 {
+      width: 100%;
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <iframe id="chatgpt" class="chat-window" src="https://chatgpt.com/"></iframe>
     <iframe id="grok" class="chat-window" src="https://grok.com/"></iframe>
     <iframe id="deepseek" class="chat-window" src="https://chat.deepseek.com/"></iframe>
-    <iframe id="doubao" class="chat-window" src="https://www.doubao.com/"></iframe>
+  </div>
+  <div class="container-2">
+    <iframe id="doubao" class="chat-window chat-window-2" src="https://www.doubao.com/"></iframe>
   </div>
   <script src="content.js"></script>
 </body>
